# predict-calorie-expenditure

./: .gitignore  README.md  pyproject.toml
data/final/: submission.csv
notebooks/: data_processing.ipynb  data_proprocessing.ipynb  eda.ipynb  model_training.ipynb
reports/: eda_report.html
