[project]
name = "predict-calorie-expenditure"
version = "0.0.0"
description = ""
authors = [
    {name = "Maxim Borodynya",email = "borody.maxim@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
repository = "https://github.com/JaskierM/customer-shopping-segmentation"
requires-python = ">=3.10,<3.13"

dependencies = [
    "ydata-profiling (>=4.16.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
